test/pos/schema-with-definition-and-reference.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name address-schema

define address
  field street required
    scalar string
  field city required
    scalar string

document
  field home required
    type address
  field work
    type address
