test/neg/e213-duplicate-definition.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name e213-test

define dup-name
  field x required
    scalar string

define dup-name
  field y required
    scalar string

document
  field foo required
    type dup-name
